fix: ensure floor usd price is truncated (#325)
* fix: ensure floor usd price is truncated

* feat: tweaks

--- a/components/Controllers/AuctionPageContent/AuctionCountdown.module.css
+++ b/components/Controllers/AuctionPageContent/AuctionCountdown.module.css
@@ -38,7 +38,7 @@
   }
   12.5%,
   97% {
-    fill: #0000ee;
+    fill: #0064fa;
   }
 }
 
@@ -50,7 +50,7 @@
   }
   25%,
   97% {
-    fill: #0000ee;
+    fill: #0064fa;
   }
 }
 
@@ -62,7 +62,7 @@
   }
   37.5%,
   97% {
-    fill: #0000ee;
+    fill: #0064fa;
   }
 }
 
@@ -74,7 +74,7 @@
   }
   50%,
   97% {
-    fill: #0000ee;
+    fill: #0064fa;
   }
 }
 
@@ -86,7 +86,7 @@
   }
   62.5%,
   97% {
-    fill: #0000ee;
+    fill: #0064fa;
   }
 }
 
@@ -98,7 +98,7 @@
   }
   75%,
   97% {
-    fill: #0000ee;
+    fill: #0064fa;
   }
 }
 
@@ -110,7 +110,7 @@
   }
   87.5%,
   97% {
-    fill: #0000ee;
+    fill: #0064fa;
   }
 }
 
@@ -122,7 +122,7 @@
   }
   98%,
   99% {
-    fill: #0000ee;
+    fill: #0064fa;
   }
 }
 
